--- a/A1/index.html
+++ b/A1/index.html
@@ -8,6 +8,9 @@
 	<canvas id="black" width="1000" height="1000">
 	please use a browser that supports "canvas"
 	</canvas>
-	<script src="script.js"></script>
+	<script src="webgl-utils.js"></script>
+	<script src="webgl-debug.js"></script>
+	<script src="cuon-utils.js"></script>
+	<script src="index.js"></script>
 </body>
 </html>
