--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 	<canvas id="black" width="1000" height="1000">
 	please use a browser that supports "canvas"
 	</canvas>
+	<span id="scoreDisplay">0</span>
 	<script src="webgl-utils.js"></script>
 	<script src="webgl-debug.js"></script>
 	<script src="cuon-utils.js"></script>
